--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,7 +2,7 @@
   display: flex;
   margin: 10px auto;
   flex-direction: row;
-  width: 48%;
+  width: 48% !important;
   padding: 14px 0;
 }
 
@@ -19,4 +19,9 @@
 
 .toggleText{
   margin: 0 15px 0 0;
+}
+
+.imgWidth{
+  width: 250px;
+  margin: 2px 2px;
 }
